--- a/Day5/Table&Forms/index.html
+++ b/Day5/Table&Forms/index.html
@@ -11,7 +11,7 @@
     <aside class="sidebar">
       <h1>Everything About Foxes</h1>
       <h2>by Sanvi Sneh</h2>
-      <form action="someprogram.php" class="form">
+      <form action="" class="form">
         <h3>Join our Mailing List!</h3>
         <label for="fname">First name:</label>
         <input type="text" id="fname" name="fname" required>
@@ -47,17 +47,17 @@
         </thead>
         <tbody>
           <tr>
-            <td><img src="public/redfox.jpg" alt="Red Fox" /></td>
+            <td><img src="images/redfox.jpg" alt="Red Fox" /></td>
             <td>The red fox, cousin to the dog, is common across Minnesota. You might even spot one in the Twin Cities.</td>
             <td><a href="https://www.nationalgeographic.com/animals/mammals/r/red-fox/" target="_blank">National Geographic</a></td>
           </tr>
           <tr>
-            <td><img src="public/blackfox.jpg" alt="Black Fox" /></td>
+            <td><img src="images/blackfox.jpg" alt="Black Fox" /></td>
             <td>The black fox is a rare genetic variation of the red fox.</td>
             <td><a href="https://www.safariltd.com/safaripedia/black-fox" target="_blank">Safari LTD</a></td>
           </tr>
           <tr>
-            <td><img src="public/grayfox.jpg" alt="Gray Fox" /></td>
+            <td><img src="images/grayfox.jpg" alt="Gray Fox" /></td>
             <td>The gray fox has salt and pepper gray fur with a long bushy tail marked with a black stripe.</td>
             <td><a href="http://www.wildlifesciencecenter.org/gray-fox" target="_blank">Wildlife Science Center</a></td>
           </tr>
