--- a/Day5/HTML&CSS/index.html
+++ b/Day5/HTML&CSS/index.html
@@ -10,7 +10,7 @@
     <div class="hdr-bg"></div>
     <header id="hdr">
         <div class="content-wrap">
-            <h1>Epic Escape Tours</h1>
+            <h1>EPIC ESCAPE TOURS</h1>
             <p>
                 Discover the world's most breathtaking destinations with us. Whether you're planning your honeymoon, a family vacation, or a solo adventure, ExploreMore is here to guide your journey.
             </p>
